--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^5.2.1",
     "mongoose": "^9.1.5",
     "nodemon": "^3.1.11",
-    "short-id": "^0.1.0-1"
+    "short-id": "^0.1.0-1",
+    "uuid": "^13.0.0"
   }
 }
